# mpp3

./: .gitignore  README.md  message.proto  notes.txt  readerStats.txt
generator/: pom.xml
generator/src/: EType.java  Main.java  MessageCreator.java  TMessageProto.java  TMessagesProto.java  message.proto
generator/src/generators/: Generator.java  Uniform.java
generator/src/types/: EType.java
generator_2/: pom.xml
generator_2/src/main/java/: Main.java  MessageCreator.java  TMessage.java
generator_2/src/main/java/generators/: Exponential.java  Generator.java  Normal.java  Uniform.java
generator_2/src/main/java/types/: ModeType.java
generator_2/src/test/java/: MessageCreatorTest.java
generator_2/src/test/java/generators/: GeneratorTest.java
manager/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  message.pb.cc  message.pb.h  message.proto  parser.cpp  parser.h  perTaskHandler.cpp  perTaskHandler.h  queue.cpp  queue.h  reader.cpp  reader.h  types.h  writer.cpp  writer.h
manager_2/: CMakeLists.txt  functions.c  main.c  message.pb.cc  parser.h  protobufHandler.cpp  protobufHandler.h  queue.c  queue.h  reader.c  reporter.c  reporter.h  results.txt  strategy.c  strategy.h  types.h  writer.c  writer.h
manager_3/: CMakeLists.txt  main.c  message.pb.cc  parser.c  parser.h  protobufHandler.cpp  protobufHandler.h  queue.h  reader.c  reader.h  readerStats.txt  results.txt  strategy.c  strategy.h  system.c  system.h
manager_3/common/: functions.c  functions.h  queue.c  types.h
manager_3/io/: fileWriter.c  fileWriter.h  message.pb.h  protobufHandler.cpp  protobufHandler.h  reader.c  writer.c
manager_3/results/: handler.txt  queue.txt  reader.txt  results.txt  system.txt  writer.txt
manager_3/tests/: main.test.c
manager_3/tests/common/: functions.test.c
manager_3/tests/src/: main.test.c
manager_3/tests/src/common/: functions.test.c  functions.test.h
